--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                        </jk-property>
                      </j-member-expression>
                    </jk-callee>
+                   <jk-arguments></jk-arguments>
                  </j-call-expression>
                </jk-left>
                <jk-right>
@@ -43,7 +44,7 @@
                          <j-identifier name="alert"></j-identifier>
                        </jk-callee>
                        <jk-arguments>
-                         <j-literal value="hello"></j-literal>
+                         <j-literal value="&quot;hello&quot;"></j-literal>
                        </jk-arguments>
                      </j-call-expression>
                    </jk-expression>
@@ -51,6 +52,7 @@
                </jk-body>
              </j-block-statement>
            </jk-consequent>
+           <jk-alternate></jk-alternate>
          </j-if-statement>
        </jk-body>
      </j-program>
