- Rename to js-as-html; add README

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
    </head>
    <body>
 
-     <!-- (AST-inspired) JS-in-HTML -->
+     <!-- (AST-inspired) js-as-HTML -->
      <j-program>
        <jk-body>
          <j-if-statement>
