--- a/demo.html
+++ b/demo.html
@@ -4,7 +4,7 @@
      <meta charset="utf-8">
      <title>JS in HTML</title>
      <link rel="shortcut icon" href="data:image/x-icon;," type="image/x-icon" />
-     <script type="module" src="index.js"></script>
+     <script type="module" src="demo.js"></script>
    </head>
    <body>
 
