- Default for container - Make all logging conditional - Add autorun

--- a/demo.html
+++ b/demo.html
@@ -4,6 +4,10 @@
      <meta charset="utf-8">
      <title>JS in HTML</title>
      <link rel="shortcut icon" href="data:image/x-icon;," type="image/x-icon" />
+     <!-- Autorun immediately evaluates without putting this into a demo -->
+     <!--
+        <script type="module" src="autorun.js"></script>
+     -->
      <script type="module" src="demo.js"></script>
    </head>
    <body>
